# ipfs-ethereum-registry

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  file.txt
smart_contract/: hardhat.config.js  package-lock.json
smart_contract/contracts/: FileRegistry.sol
smart_contract/scripts/: deploy.js  watchEvents.js
smart_contract/test/: FileRegistry.js
src/: abi.json  blockchain.rs  cli.rs  ipfs.rs  lib.rs  main.rs
tests/: integration_test.rs
