[package]
name = "ipfs-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10"
ipfs-api-backend-hyper = "0.6"
log = "0.4"
tokio = { version = "1", features = ["full"] }
web3 = { version = "0.18.0", features = ["signing"] }
anyhow = "1.0"
secp256k1 = "0.21.3"

[dev-dependencies]
testcontainers = "0.14"
tempfile = "3.4"